# uk_petitions

./: LICENSE  README.md  petitions_app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: frequency.yml
